<resources>
    <string name="app_name">MiPush Tester</string>
    <string name="status_not_registered">Not registered (%1$s)</string>
    <string name="status_registered">Registered (%1$s)</string>
    <string name="status_miui_push_detected">System mode</string>
    <string name="status_miui_push_not_detected">System push service not found</string>
    <string name="push_card_title">Send to yourself</string>
    <string name="push_card_summary">Send a message to this device and test push availability</string>
    <string name="create_push">Create a push</string>
    <string name="get_reg_info">My registration info</string>
    <string name="copy_id">Copy ID</string>
    <string name="get_reg_info_dialog"><![CDATA[
    <h1>Registration info</h1>
    <summary>These data is read from MiPush SDK, they will be automatically updated.</summary>
    <br />
<h3>Registration ID:</h3>
<tt>%1$s</tt>
<br /><br />
<summary><font color="%2$s">Everyone who knows your registration ID can send notification to this device.</font></summary>
<br />
<h3>Registration region ID:</h3>
<tt>%3$s</tt>
<br /><br />
<summary><font color="%2$s">The ID which represents your region when you register push. It may not associated with your IP.</font></summary>
    ]]></string>
    <string name="get_reg_info_unavailable">Unavailable (Only available after you register)</string>
    <string name="clear_notifications">Clear all notifications</string>
    <string name="done">Done</string>
    <string name="close">Close</string>
    <string name="reset_title">Reset</string>
    <string name="reset_summary">Delete all push settings, include your registration ID</string>
    <string name="reset_and_restart">Reset and restart</string>
    <string name="reset_toast">Cleaning, please wait until it starts automatically.....</string>

    <string name="account_card_title">Account and alias</string>
    <string name="account_card_description">Set your account and alias for this device, you can send push to this alias or account</string>
    <string name="account_card_set_alias">Set alias</string>
    <string name="account_card_set_account">Set account name</string>

    <!-- Send Push -->
    <string name="send_push_identity">Your identity</string>
    <string name="send_push_identity_summary">Select the method to identify your device</string>
    <string name="send_push_identity_reg_id">(Your registration id)</string>
    <string name="send_push_identity_alias_prefix">(Alias) %1$s</string>
    <string name="send_push_identity_account_prefix">(Account) %1$s</string>
    <string name="send_push_delay">Delay</string>
    <string name="send_push_delay_item_summary">Delay this message</string>
    <string name="send_push_delay_summary">Delay send this message, from 0 seconds to 60 seconds.</string>
    <string name="send_push_display">Display Type</string>
    <string name="send_push_display_summary">The method to display the notification on your device</string>
    <string-array name="send_push_display_items_ui">
        <item>All</item>
        <item>Sound</item>
        <item>Vibrate</item>
        <item>Lights</item>
    </string-array>
    <string-array name="send_push_display_items_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string name="send_push_pass_through">Pass through message</string>
    <string name="send_push_pass_through_summary">Message sent directly to this app without displaying any notifications (We\'ll display a toast and show message details when received)</string>
    <string name="send_push_click_action">Click action</string>
    <string name="send_push_click_action_type">Type</string>
    <string name="send_push_click_action_type_summary">The action type when you click on the notification</string>
    <string-array name="send_push_click_action_items_ui">
        <item>Start app</item>
        <item>Launch URL</item>
        <item>Start push details page</item>
    </string-array>
    <string-array name="send_push_click_action_items_id">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="send">Send</string>
    <string name="url">URL</string>
    <string name="send_push_click_action_url_summary">The URL will be launched after you click the notification</string>
    <string name="send_push_notify_foreground">Notify when is foreground</string>
    <string name="send_push_notify_foreground_summary">Still receive message when this app is in foreground</string>
    <string name="send_push_enforce_wifi">Only receive on WiFi</string>
    <string name="send_push_enforce_wifi_summary">Only receive this push when you\'ve connected to WiFi</string>
    <string name="send_push_sound_uri">Use custom notification sound</string>
    <string name="send_push_sound_uri_summary">Use internal sound instead of system default. (Sound comes from Android 4.1.1 under Apache 2 license)</string>
    <string name="error_delay_invalid">Delay is invalid</string>
    <string name="error_url_invalid">URL is invalid</string>
    <string name="send_push_sending">Sending</string>
    <string name="send_push_fail">Failed to send</string>
    <string name="send_push_sent">Sent</string>
    <string name="send_push_limits">Limits</string>
    <string name="send_push_limit_none">None</string>
    <string name="send_push_limit_only_template">Only %1$s can receive</string>
    <string name="send_push_limit_cannot_template">%1$s can\'t receive</string>
    <string name="send_push_limit_locale">Locale</string>
    <string name="send_push_limit_locale_summary">Limit message receiving by client locale</string>
    <string name="send_push_limit_version">Version</string>
    <string name="send_push_limit_version_summary">Limit message receiving by client version</string>
    <string name="send_push_limit_model">Model</string>
    <string name="send_push_limit_model_summary">Limit message receiving by device model</string>
    <string-array name="send_push_limit_ev_default">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string name="send_push_global">Use Global server</string>
    <string name="send_push_global_summary">Switch to global MiPush server, it may improve message receiving if you are not in China%1$s</string>
    <string name="send_push_global_summary_may_not_be_able_to_receive_after_enabling"><![CDATA[
<br /><b>You may not be able to receive messages after enabling</b>
    ]]></string>
    <string name="send_push_global_summary_may_not_be_able_to_receive_after_disabling"><![CDATA[
<br /><b>You may not be able to receive messages after disabling</b>
    ]]></string>
    <string name="send_push_pass_through_notification">Pass through notification</string>
    <string name="send_push_pass_through_notification_summary">Still display a notification if it\'s a pass through message</string>
    <!-- Message detail -->
    <string name="detail">Message ID: %1$s\n\nMiPushTester custom Extras: %2$s\n\nMiPush Extras: \n%3$s\n\nPass Through: %4$s\n\nFull message:\n%5$s\n\nDevice Info:\nBrand: %6$s\nName: %7$s\nMIUI Version: %8$s</string>
    <string name="detail_title">Message Detail</string>
    <string name="error_detail">Details</string>
    <string name="share_logs">Share Logs</string>
    <string name="share_logs_chooser_title">Send logs to…</string>
    <string name="view_on_github">View on GitHub</string>
    <string name="error_need_register">This feature requires registration at first</string>
    <string name="update_available">Update available: %1$s</string>
    <string name="view">View</string>
    <!-- Push Receiver -->
    <string name="push_receiver_pass_through_received">Pass through message received, id: %1$s</string>
    <!-- Topics -->
    <string name="title_topics">Topics</string>
    <string name="topic_action_browse">Discover topics</string>
    <string name="topic_action_title">Subscribe topics</string>
    <string name="topic_action_description">Subscribe some topics provided by the author, I\'ll send some messages to these topics</string>
    <string name="error_load_topics">Cannot retain topics</string>
    <string name="error_description_global">Check your internet access and try again later.</string>
    <string name="retry">Retry</string>
    <string name="topic_empty_title">Currently empty</string>
    <string name="topic_empty_description">We\'ll add more topics here, check it back later.</string>
    <!-- Accept Time -->
    <string name="accept_time_card_title">Accept Time</string>
    <string name="accept_time_card_description">Set the time period which allows to receive push. Messages arrived outside the period will arrive next period</string>
    <string name="accept_time_card_current"><![CDATA[
Current: <b>%02d:%02d-%02d:%02d</b> %5$s
    ]]></string>
    <string name="accept_time_card_current_always">(Always)</string>
    <string name="accept_time_card_current_never">(Never)</string>
    <string name="modify_start_time">Modify start time</string>
    <string name="modify_end_time">Modify end time</string>
    <string name="add">Add</string>
    <string name="modify">Modify</string>
    <string name="remove">Remove</string>
    <string name="alias">Alias</string>
    <string name="account">Account</string>
    <string name="modify_alias">Modify the alias</string>
    <string name="modify_account">Modify the account</string>
    <string name="add_alias">Add an alias name. You can use this name to send push</string>
    <string name="add_account">Add an account name. You can use this name to send push</string>
    <string name="alias_empty_title">You don\'t have any alias</string>
    <string name="alias_empty_description">To add a new one, click the button on right bottom corner</string>
    <string name="account_empty_title">You don\'t have any account</string>
    <string name="account_empty_description">To add a new one, click the button on right bottom corner</string>
    <string name="command_register">Register</string>
    <string name="push_receiver_command_error">%1$s fail, error code %2$s</string>

    <!-- Switch On/Off  -->
    <string name="switch_on_text">On</string>
    <string name="switch_off_text">Off</string>

    <string name="privacy_protection_title">Privacy protection</string>
    <string name="privacy_protection_summary">By using privacy protection, the tester will try to prevent the MiPush SDK to read some data from your device, such as the permissions required by the tester. After enabling, it may not be able to register or receive push, use it at your own risk. Toggling needs to restart the app.</string>

    <string name="restart">Restart</string>
</resources>
