<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_nav"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="moe.yuuta.mipushtester.MainFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_main" >
        <action
            android:id="@+id/action_mainFragment_to_sendPushFragment"
            app:destination="@id/sendPushFragment" />
        <action
            android:id="@+id/action_mainFragment_to_topicSubscriptionFragment"
            app:destination="@id/topicSubscriptionFragment" />
    </fragment>
    <fragment
        android:id="@+id/sendPushFragment"
        android:name="moe.yuuta.mipushtester.push.SendPushFragment"
        android:label="@string/push_card_title" />
    <fragment
        android:id="@+id/topicSubscriptionFragment"
        android:name="moe.yuuta.mipushtester.topic.TopicSubscriptionFragment"
        android:label="@string/title_topics"
        tools:layout="@layout/fragment_topic_subscription" />
</navigation>