<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="uiHandler"
            type="moe.yuuta.mipushtester.MainFragmentUIHandler" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_account_alias_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/account_card_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_account_alias_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:text="@string/account_card_description"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/text_account_alias_title"
                app:layout_constraintTop_toBottomOf="@id/text_account_alias_title" />

            <TextView
                android:id="@android:id/button1"
                android:text="@string/account_card_set_account"
                android:drawableStart="@drawable/ic_person_24dp"
                style="@style/CardButton"
                android:onClick="@{uiHandler::handleSetAccount}"
                app:layout_constraintTop_toBottomOf="@id/text_account_alias_summary"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@android:id/button2"
                android:text="@string/account_card_set_alias"
                android:drawableStart="@drawable/ic_perm_identity_24dp"
                style="@style/CardButton"
                android:onClick="@{uiHandler::handleSetAlias}"
                app:layout_constraintTop_toBottomOf="@android:id/button1"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>