<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="uiHandler"
            type="moe.yuuta.mipushtester.MainFragmentUIHandler" />
        <variable
            name="acceptTime"
            type="moe.yuuta.mipushtester.accept_time.AcceptTimePeriod" />
    </data>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardUseCompatPadding="true"
        android:layout_marginBottom="4dp"
        android:layout_marginTop="4dp"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:id="@+id/text_accept_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textSize="16sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/accept_time_card_title"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_accept_time_summary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="?android:textColorSecondary"
                android:text="@string/accept_time_card_description"
                app:layout_constraintTop_toBottomOf="@id/text_accept_time_title"
                app:layout_constraintStart_toStartOf="@id/text_accept_time_title"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/text_accept_time_current"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:layout_marginEnd="16dp"
                android:textColor="?android:textColorSecondary"
                app:layout_constraintTop_toBottomOf="@id/text_accept_time_summary"
                app:layout_constraintStart_toStartOf="@id/text_accept_time_summary"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@android:id/button1"
                android:text="@string/modify_start_time"
                android:drawableStart="@drawable/ic_access_time_24dp"
                style="@style/CardButton"
                android:onClick="@{uiHandler::handleSetAcceptTimeStart}"
                app:layout_constraintTop_toBottomOf="@id/text_accept_time_current"
                app:layout_constraintStart_toStartOf="parent" />
            <TextView
                android:id="@android:id/button2"
                android:text="@string/modify_end_time"
                android:drawableStart="@drawable/ic_timelapse_24dp"
                style="@style/CardButton"
                android:onClick="@{uiHandler::handleSetAcceptTimeEnd}"
                app:layout_constraintTop_toBottomOf="@android:id/button1"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</layout>